<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/latar3"
    tools:context=".Syntax5">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:layout_marginTop="108dp"
        android:text="@string/syntax_service"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/cth_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/aksespenyedia" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="199dp"
        android:layout_height="66dp"
        android:layout_marginTop="440dp"
        android:text="@string/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="199dp"
        android:layout_height="66dp"
        android:layout_marginTop="168dp"
        android:text="@string/subtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="385dp"
        android:layout_height="127dp"
        android:layout_marginBottom="108dp"
        android:contentDescription="@string/cth_url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/urlmateri" />

    <Button
        android:id="@+id/BtnBack"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginBottom="48dp"
        android:background="#88CBEB"
        android:text="@string/Kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>