<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/latar3"
    tools:context=".Syntax3">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:layout_marginTop="136dp"
        android:text="@string/syntax_activity"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="395dp"
        android:layout_height="205dp"
        android:layout_marginBottom="312dp"
        android:contentDescription="@string/cth_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/activity" />

    <Button
        android:id="@+id/BtnBack"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginBottom="48dp"
        android:background="#88CBEB"
        android:text="@string/Kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>